data/derived/fa15/progs/unify/prog0676.ml.out
Characters 48-62:
  let fixpoint (f,b) = wwhile ( let func x = f in (f, f x not b), b);;
                                                  ^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
